# dbt-docs-to-md

./: README.md  SKILL.md  pyproject.toml
examples/output/: cleaned-customers.md  customers.md  index.md  metrics.md
examples/output/_bundles/: cleaned-customers.json  cleaned-orders.json  customers.json
examples/output/_bundles/analytics/: dim_customers.json  dim_customers.summary.json  stg_customers.json  stg_customers.summary.json  stg_orders.json  stg_orders.summary.json
examples/output/analytics/: dim_customers.md  stg_orders.md
src/dbt_docs_to_md/: __init__.py  adapter.py  bundle.py  cli.py  domain.py  lineage.py  semantic_collector.py  tests_collector.py
src/dbt_docs_to_md/markdown/: __init__.py  environment.py  index.py  inject.py  markers.py  metrics.py  renderer.py  templates.py
src/dbt_docs_to_md/markdown/templates/: index.md.jinja  model.md.jinja
src/dbt_docs_to_md/markdown/templates/en/: index.md.jinja  metrics.md.jinja  model.md.jinja
src/dbt_docs_to_md/markdown/templates/pt_BR/: index.md.jinja  metrics.md.jinja  model.md.jinja
tests/: conftest.py  test_adapter.py  test_i18n.py  test_inject.py  test_layers.py  test_lineage.py  test_renderer.py  test_semantic.py  test_tests_collector.py
tests/fixtures/: catalog.json  manifest.json
